-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.3
-
None
-
Device: Nokia N8
Firmware: 92_201026_hw79 RND
-
737b75e1
Steps to reproduce:
- Launch audioinput example
- Make some noise, and observe that it is registered on the level meter
- Press suspend
- Press resume
- Make some more noise - it is not shown on the level meter, indicating that audio capture has not resumed
Note that this occurs in both push and pull modes.
Another way to observe the defect:
- Launch the spectrum demo
- Select 'Mode > Record and play back'
- Press record
- Make some noise, and observe that it is registered in the waveform display
- Press pause
- Press record
- Note that the waveform display is not updated, indicating the audio capture has not resumed
- relates to
-
QTBUG-13058 audioinput example crash
-
- Closed
-